<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_inventory">Inventory</string>
    <string name="button_scan">Scan Barcode</string>
    <string name="button_category">Categories</string>
    <string name="button_help">Help</string>
    <string name="app_title">Inventory App</string>
    <string name="scan">Scan</string>
    <string name="scan_resut_lable">Scan Result:</string>
    <string name="title_activity_login">Login</string>
    <string name="inventory_add">Add / Edit</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="logout_label">Logout</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_list_item">Inventory List</string>
    <string name="action_new">New Note</string>
    <string name="action_refresh">Refresh</string>
    <string name="save_button">Save</string>
    <string name="item_hint_title">Item Title</string>
    <string name="item_hint_detail">Item Description</string>
    <string name="item_hint_category">Item Category</string>
    <string name="edit_error_message">You cannot save a note without a title</string>
    <string name="edit_error_title">Error!</string>
    <string name="forgotten_password">Password Reset</string>
    <string name="title_activity_password_reset">Reset Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit"> Edit </string>
    <string name="delete"> Delete </string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="tap">Tap the image to open the camera!!</string>
    <string name="title_activity_view_item">ViewItem</string>
    <string name="title_activity_list_category">Category List</string>
    <string name="title_activity_list_category_item">Category List</string>
    <string name="title_activity_export">Export Inventory</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_found_item">Result</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_help">Help</string>

</resources>
