
<LinearLayout
    android:id="@+id/container"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
   
    
    
  <TextView android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
            android:text="@string/app_title" 
            android:padding="25dip" 
            android:gravity="center" 
            android:textSize="20sp" />


      <Button android:id="@+id/inventory_button" 
          android:layout_width="fill_parent" 
          android:layout_height="wrap_content"
            android:text="@string/button_inventory"/>
  
      
  <Button android:id="@+id/scan_button" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
            android:text="@string/button_scan"/>
  
  <Button android:id="@+id/category_button" 
      android:layout_width="fill_parent"
       android:layout_height="wrap_content"
            android:text="@string/button_category"/>
    
      <Button android:id="@+id/help_button" 
          android:layout_width="fill_parent" 
          android:layout_height="wrap_content"
            android:text="@string/button_help"/>
      

  <TextView android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/scan_resut_lable" />
  
	<TextView android:id="@+id/scan_result" 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
     
</LinearLayout>