<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<TextView
        android:id="@+id/itemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title" />
    <EditText
        android:id="@+id/itemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/item_hint_title" />

    <TextView
        android:id="@+id/detailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description" />
    <EditText
        android:id="@+id/itemDetailsInput"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:hint="@string/item_hint_detail"
        android:ems="10" />
    
        <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Category" />
        
    <EditText
        android:id="@+id/itemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/item_hint_category"
        android:singleLine="true"
        android:ems="10" />
    
            <TextView
        android:id="@+id/author_artistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Author/Artist" />
        
    <EditText
        android:id="@+id/author_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Author / Artist" />

        <TextView
        android:id="@+id/pub_relDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Author/Artist" />
        
    	<EditText
        android:id="@+id/publish_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Release / Publish Date" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.28"
        android:gravity="center|bottom"
        android:orientation="vertical" >


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/img_view_border"
         />



            <LinearLayout 
    android:id="@+id/LinearLayout03" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:layout_alignParentBottom="true">
    
                <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_weight="1" 
        android:src="@drawable/ic_action_camera"/>
                
                                <Button
        android:id="@+id/ocr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" 
        android:text="OCR"/>


</LinearLayout>

<LinearLayout 
    android:id="@+id/LinearLayout02" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:layout_alignParentBottom="true">
    
    <Button 
        android:id="@+id/save_button" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_weight="1" 
        android:text="@string/save_button">
    </Button>
    <Button 
        android:id="@+id/cancel_button" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_weight="1" 
        android:text="Cancel">
    </Button>

</LinearLayout>

        



    </LinearLayout>

</LinearLayout>